2010-11-17  Jean-Louis Martineau <martineau@zmanda.com>
	* device-src/xfer-dest-taper-cacher.c,
	  device-src/xfer-dest-taper-splitter.c: Always call device_finish_file
	  if device_start_file succeed.

2010-11-16 Dan Locks <dwlocks@zmanda.com>
	*  packaging/rpm/amanda.spec.src: add rhel6 stanza to distro detection

2010-11-16  Jean-Louis Martineau <martineau@zmanda.com>
	* installcheck/Amanda_Changer_single.pl: Typo.
	* server-src/amtape.pl: Typo.

2010-11-16  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/find.c: Keep the complete error message.

2010-11-16  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Changer/disk.pm: new MOUNT, UMOUNT, UMOUNT-LOCKFILE and
				       UMOUNT-IDLE properties.
	* man/xml-source/amanda-changers.7.xml: Add new chg-disk property.
	* NEWS: Add new chg-disk property.

2010-11-16  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Changer.pm: Add quit method.
	* perl/Amanda/Changer/aggregate.pm: Add quit method.
	* perl/Amanda/Changer/rait.pm: Add quit method.
	* perl/Amanda/Recovery/Clerk.pm: Call scan quit method.
	* perl/Amanda/Recovery/Scan.pm: Add quit method.
	* perl/Amanda/Taper/Controller.pm: Call scan quit method.
	* perl/Amanda/Taper/Scan.pm: Add quit method.
	* perl/Amanda/Taper/Scribe.pm: finished_cb to Add scribe_notif_tape_done
	* server-src/amcheck-device.pl, server-src/amcheckdump.pl,
	  server-src/amidxtaped.pl, server-src/amlabel.pl,
	  server-src/amrestore.pl, server-src/amrmtape.pl,
	  server-src/amtape.pl: Call scan/changer quit method.
	* server-src/amvault.pl scribe_notif_tape_done with finished_cb.
	* installcheck/Amanda_Changer.pl,
	  installcheck/Amanda_Changer_compat.pl,
	  installcheck/Amanda_Changer_disk.pl,
	  installcheck/Amanda_Changer_multi.pl,
	  installcheck/Amanda_Changer_ndmp.pl,
	  installcheck/Amanda_Changer_null.pl,
	  installcheck/Amanda_Changer_rait.pl,
	  installcheck/Amanda_Changer_robot.pl,
	  installcheck/Amanda_Changer_single.pl,